# Snake_obstaculos

./: CMakeLists.txt  Makefile  README.md  read.me  snake
include/: game.h
src/: draw.c  game.c  main.c
